fix formatting on small devices

--- a/_sass/_post.sass
+++ b/_sass/_post.sass
@@ -4,18 +4,15 @@
   margin: auto
   width: 90%
   text-align: left
-  .gfyContainer
+  .gif-container
     position: relative
     width: 100%
     max-width: 600px
     padding-bottom: 30%
     height: 0
     margin: 0 auto
-    iframe.gfycat
+    img
       width: 100%
-      height: 100%
-      position: absolute
-      left: 0
 
   .thrilling
     text-align: right
